[add product] fix form text vertical position must align at middle

--- a/assets/_form.sass
+++ b/assets/_form.sass
@@ -26,3 +26,8 @@
 		.width-field-tooltip
 			@extend .col-xs-2
 			width: 24px
+
+	.form-text
+		@extend .control-label
+		display: inline-block
+		max-width: 100%
